# marimo-integration-ci

./: .gitignore  README.md  pyproject.toml
.github/workflows/: export-notebooks.yml
notebooks/: kitchen_sink.py  pdf_snapshot_smoke.py  sub_notebook.py
public/: index.html
public/examples/ui/: arrays_and_dicts.py.html  arrays_and_dicts.py.wasm.edit.html  arrays_and_dicts.py.wasm.run.html  batch_and_form.py.html  batch_and_form.py.wasm.edit.html  batch_and_form.py.wasm.run.html  data_explorer.py.html  data_explorer.py.wasm.edit.html  data_explorer.py.wasm.run.html  filterable_table.py.html  inputs.py.html  layout.py.html  layout.py.wasm.edit.html  layout.py.wasm.run.html  mermaid.py.html  reactive_plots.py.html  refresh.py.html  refresh.py.wasm.edit.html  refresh.py.wasm.run.html  table.py.html  table.py.wasm.edit.html  table.py.wasm.run.html  tabs.py.html  tabs.py.wasm.edit.html  tabs.py.wasm.run.html  task_list.py.html
public/examples/ui/assets/: any-language-editor-BMX06HTh.js  architectureDiagram-IFBEXTG3-BHLdWJ-6.js  c4Diagram-ZCSEYPFN-B5n36dye.js  compile-CuHwJDKs.js  data-editor-Di80Mrpu.js  edit-page-CmI2AI6u.js  flowDiagram-NWEUNK3L-D-BRD_56.js  gitGraph-YCYPL57B-dD4eYAH1.js  index-BDIgmJj6.js  index-Bl_uexm2.js  index-Bn0S4auU.js  index-DiI6Ailv.js  mermaid-BezMJi2d.js  mindmap-definition-OEB2RXX2-CLgcjXda.js  sequenceDiagram-WK7YDQ3N-Dm0s8GJv.js  slides-component-B4c0307R.js  terminal-CcoDMgCr.js  tree-CjUFyJlP.js
scripts/: export_notebooks.py  setup_examples.py  test_exports.py  test_pdf_visual_snapshots.py
